# duskwell

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
crates/lore-gateway/: Cargo.toml  NOTES.md
crates/lore-gateway/src/: fake.rs  lib.rs  traits.rs
crates/toolbelt-core/: Cargo.toml
crates/toolbelt-core/src/: main.rs  routes.rs
crates/toolbelt-preview/: Cargo.toml
crates/toolbelt-preview/src/: lib.rs
crates/toolbelt-repomap/: Cargo.toml
crates/toolbelt-repomap/src/: lib.rs
crates/toolbelt-types/: Cargo.toml
crates/toolbelt-types/bindings/: ApiError.ts  AssetKind.ts  BranchInfo.ts  EntryKind.ts  FileInfo.ts  FileState.ts  RepoInfo.ts  RevisionInfo.ts  StatusEntry.ts  TreeEntry.ts
crates/toolbelt-types/src/: lib.rs
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/: Shell.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
