[package]
name = "lore-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbelt-types = { path = "../toolbelt-types" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
