[package]
name = "toolbelt-preview"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbelt-types = { path = "../toolbelt-types" }
lore-gateway = { path = "../lore-gateway" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
